Fixed, add images covers and text

--- a/alplora/static/alplora/css/alplora.css
+++ b/alplora/static/alplora/css/alplora.css
@@ -137,7 +137,7 @@ h6 {
 }
 
 .intro-login {
-    background: url(../img/banner-4.jpg) no-repeat center center;
+    background: url(../img/banner-4.png) no-repeat center center;
     background-size: cover;
     height: 100%;
 }
